--- a/#src/html/layout/_head.html
+++ b/#src/html/layout/_head.html
@@ -8,7 +8,7 @@
   <meta property="og:type" content="">
   <meta property="og:url" content="">
   <meta property="og:image" content="">
-
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet"> 
   <link rel="stylesheet" href="css/libs.min.css">
   <link rel="stylesheet" href="css/main.min.css">
 </head>
