--- a/#src/scss/base/_base.scss
+++ b/#src/scss/base/_base.scss
@@ -1,48 +1,247 @@
-body
-{
-    
-    font-family: 'Roboto', sans-serif;
-    font-style: normal;
-    font-weight: 400;
+body {
+
+  font-family: 'Roboto', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 1.3;
+  color: #000;
+  background-color: #fff;
+  position: relative;
+
+  @media (min-width: 768px) {
     font-size: 16px;
-    line-height: 1.3;
-    // color: #333;
-    color: #ffff;
-    background-color: #000;
-    position: relative;    
+  }
+
+  @media (min-width: 992px) {
+    font-size: 18px;
+  }
 }
-.wrapimg
-{
-    position: absolute;
-    z-index: 10000000;
-    left: 0;
 
-    width: 100%;
-    height: 100%;
-    // display: none;
+.wrapimg {
+  position: absolute;
+  z-index: 10000000;
+  left: 0;
 
-    pointer-events: none;
+  width: 100%;
+  height: 100%;
+  // display: none;
 
-    opacity: .2;
-    background-image: url(../images/dest/bg02.png);
-    background-position: center 0px; 
+  pointer-events: none;
 
-            filter: invert(100%);
-    -webkit-filter: invert(100%);
-       -moz-filter: invert(100%);
-         -o-filter: invert(100%);
-        -ms-filter: invert(100%);
+  opacity: .2;
+  background-image: url(../images/dest/bg02.png);
+  background-position: center 0px;
+
+  filter: invert(100%);
+  -webkit-filter: invert(100%);
+  -moz-filter: invert(100%);
+  -o-filter: invert(100%);
+  -ms-filter: invert(100%);
 }
-.site-wrapper{
+
+.site-wrapper {
   overflow: hidden;
   position: relative;
 }
 
 
-h1, h2, h3, h4, h5, h6{ 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: 500;
+  margin-top: 0;
+  line-height: 1.1;
 }
-body{ 
+
+h1 {
+  font-size: 18px;
+  margin-bottom: 30px;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+  text-align: center;
+  color: #fff;
+
+  @media (min-width: 768px) {
+    font-size: 25px;
+    margin-bottom: 35px;
+  }
+
+  @media (min-width: 992px) {
+    font-size: 35px;
+  }
+
+  display: inline-block;
+  margin-left: auto;
+}
+
+h2 {
+
+  font-size: 18px;
+  margin-bottom: 18px;
+
+  @media (min-width: 768px) {
+    font-size: 20px;
+    margin-bottom: 21px;
+  }
+
+  @media (min-width: 992px) {
+    font-size: 23px;
+  }
+
+}
+
+body {
   // overflow:hidden;
 }
 
+.frame {
+  padding: 18px 0;
 
+  @media (min-width: 768px) {
+    padding: 30px 0;
+  }
+
+  @media (min-width: 768px) {
+    padding: 43px 0;
+  }
+}
+
+.site-header {
+  text-align: center;
+}
+
+.top-area {
+  padding-top: 23px;
+  padding-bottom: 36px;
+  margin-bottom: 18px;
+  background: linear-gradient(202.34deg, #0583F1 24.65%, rgba(48, 113, 169, 0.458333) 155.96%, rgba(37, 132, 216, 0) 251.01%), #0583F1;
+
+  @media (min-width: 768px) {
+    padding-top: 50px;
+    padding-bottom: 63px;
+    margin-bottom: 20px;
+  }
+
+  @media (min-width: 992px) {
+    padding-top: 65px;
+    padding-bottom: 56px;
+
+  }
+
+  h2 {
+    color: #fff;
+  }
+
+}
+
+.slider {
+  &__btn {
+
+    display: none;
+
+    &.swiper-button-disabled {
+      @media (min-width: 768px) {
+        display: none;
+      }
+    }
+
+    @media (min-width: 768px) {
+      display: block;
+
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      filter: drop-shadow(0px 1px 6px rgba(0, 0, 0, 0.2));
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      background-color: #fff;
+      z-index: 4;
+
+      &:before {
+        display: block;
+        position: absolute;
+        content: '';
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background: url(../images/btn-arrow.svg) center no-repeat;
+
+      }
+
+    }
+
+    @media (min-width: 992px) {
+      width: 50px;
+      height: 50px;
+    }
+
+
+    &_prev {
+      left: -20px;
+
+      @media (min-width: 992px) {
+        left: -25px;
+      }
+
+      &:before {
+        transform: rotate(180deg);
+      }
+
+    }
+
+    &_next {
+      right: -20px;
+
+      @media (min-width: 992px) {
+        right: -25px;
+      }
+    }
+  }
+}
+
+.slider-cont {
+  position: relative;
+}
+
+.slider__pagination {
+  text-align: center;
+  margin-top: 9px;
+
+  @media (min-width: 768px) {
+    display: none;
+  }
+
+  .swiper-pagination-bullet {
+    width: 9px;
+    height: 9px;
+    background-color: #fff;
+
+    opacity: 1;
+
+  }
+
+  .swiper-pagination-bullet-active {
+    background: #9AD3FF;
+
+  }
+}
+
+.swiper-container-horizontal>.swiper-pagination-bullets .swiper-pagination-bullet {
+  margin: 0 2px;
+}
+
+.mewtwo-widget {
+  filter: drop-shadow(2px 2px 4px rgba(147, 147, 147, 0.15)) drop-shadow(-1px -1px 4px rgba(134, 134, 134, 0.15));
+}
+
+
+.container {
+  @media (min-width: 1200px) {
+    max-width: 960px;
+  }
+}
